@@ -5,6 +5,66 @@
   <artifactId>vavi-sound-sc55</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
+  <profiles>
+    <profile>
+      <!-- mvn -P run initialize antrun:run -->
+      <id>run</id>
+      <activation>
+        <file>
+          <exists>${basedir}/local.properties</exists>
+        </file>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>properties-maven-plugin</artifactId>
+            <version>1.2.1</version>
+            <executions>
+              <execution>
+                <id>read-properties</id>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>read-project-properties</goal>
+                </goals>
+                <configuration>
+                  <files>
+                    <file>${basedir}/local.properties</file>
+                  </files>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>3.1.0</version>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <java classname="vavi.sound.sc55.Mcu" fork="true">
+                  <classpath>
+                    <path refid="maven.compile.classpath"/>
+                    <path refid="maven.test.classpath"/>
+                  </classpath>
+                  <jvmarg value="--add-modules" />
+                  <jvmarg value="jdk.incubator.vector" />
+                  <jvmarg value="-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties" />
+                  <jvmarg value="-Dswing.defaultlaf=com.formdev.flatlaf.FlatLightLaf" />
+                  <jvmarg value="-Dapple.laf.useScreenMenuBar=true" />
+                  <jvmarg value="-Dapple.awt.application.name=Nuked-SC55" />
+                  <jvmarg value="-Dsc55.dir=${sc55.dir}" />
+                </java>
+              </target>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
   <build>
     <plugins>
       <plugin>
@@ -12,11 +72,13 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.12.1</version>
         <configuration>
-          <source>21</source>
-          <target>21</target>
+          <source>25</source>
+          <target>25</target>
           <compilerArgs>
             <arg>--add-exports</arg>
             <arg>java.desktop/com.sun.media.sound=ALL-UNNAMED</arg>
+            <arg>--add-modules</arg>
+            <arg>jdk.incubator.vector</arg>
           </compilerArgs>
           <!-- https://stackoverflow.com/a/30472473 -->
           <fork>true</fork>
@@ -29,6 +91,7 @@
         <configuration>
           <argLine>
             --add-exports java.desktop/com.sun.media.sound=ALL-UNNAMED
+            --add-modules jdk.incubator.vector
             -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
             -Dswing.defaultlaf=com.formdev.flatlaf.FlatLightLaf
           </argLine>
@@ -50,7 +113,7 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.12.2</version>
+        <version>6.0.2</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
